# cuda_available

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml  upload.yml  win_build.yml
scripts/: install_cuda_manylinux.py  install_cuda_ubuntu.py  make_version.py  prepare_linux.sh  rename_wheels.py
src/: main.cu
